--- a/Pruebas/EsilosMenu.css
+++ b/Pruebas/EsilosMenu.css
@@ -1,5 +1,3 @@
-body {
-}
 .nav {
   background-color: black;
   height: 80px;
@@ -41,8 +39,8 @@ body {
 .navItem:hover{
     --clippy:polygon(0 0, 100% 0, 100% 100%, 0 100%)
 }
-.navImput:checked + .navMenu {
-}
+/*.navImput:checked + .navMenu {
+}*/
 
 .navLabel,
 .navInput {
@@ -106,12 +104,49 @@ grid-column: 1 / 3;
 
 }
 
+/*footer*/
 
+footer{
+  width: 100%;
+  background-color: grey;
+  color: white;
+}
+.containerTodo{
+  width: 100%;
+  max-width: 1200px;
+  margin: auto;
+}
+.containerFooter{
+  display: flex;
+}
+.primerColumna{
+  max-width: 400px;
 
+}
+.primerColumna h2{
+  font-size: 22px;
+}
+.primerColumna p{
+  font-size: 14px;
+  color: white;
+  margin-top: 20px;
+}
 
+.segundaColumna{
+  max-width: 400px;
+}
+.segundaColumna h2{
+  font-size: 22px;
+}
+.segunddaColumna .linea{
+  margin-top: 20px;
+  display: flex;
 
-
-
+}
+.linea img{
+  width: 50px;
+  height: 50px;
+}
 
 @media (max-width: 700px){
    .navLabel{
