--- a/estilos.css
+++ b/estilos.css
@@ -122,7 +122,7 @@ Nav
 
 .containerArticulo {
   width: 60%;
-
+  place-items: center;
   display: grid;
   grid-template-columns: repeat(2, 4fr);
   grid-gap: 50px;
@@ -150,13 +150,14 @@ img {
   text-decoration: underline;
   text-decoration-color: orangered;
   font-size: 2.4rem;
+  margin-top: 50px;
 }
 .galeria {
   width: 85%;
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
-
+  margin-top: 15px;
   display: grid;
   grid-template-columns: repeat(auto-fit, 133px);
   grid-auto-rows: 200px;
@@ -179,6 +180,18 @@ img {
 .multimedia {
   padding-top: 200px;
 }
+
+/*Animaciones*/
+
+.mianimacion{
+  animation-name: mianimacion;
+
+}
+
+@keyframes Rotacion {
+  
+}
+
 /*
 .multimediaItems{
 display: flex;
