--- a/estilos.css
+++ b/estilos.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Roboto", sans-serif;
+  padding: 0 1 0.5rem;
 }
 footer {
   margin-top: 25%;
@@ -10,7 +11,7 @@ footer {
 h2 {
   font-size: 15px;
   text-align: center;
-  color: white
+  color: white;
 }
 p {
   line-height: 1.5;
@@ -39,9 +40,8 @@ Nav
 */
 
 .nav {
- /* background-color: rgb(87, 134, 87);*/
-  height: 80px;
   color: white;
+  height: 80px;
 }
 .navContainer {
   display: flex;
@@ -108,7 +108,7 @@ Nav
   font-family: "Inter", sans-serif;
   font-weight: 200;
   font-size: 25px;
-  
+
   font-style: italic;
 }
 
@@ -118,17 +118,16 @@ Nav
   box-sizing: border-box;
 }
 .content {
-max-width: 1170px;
-margin-left: auto;
-margin-right: auto;
-padding: 1.5rem;
-
+  max-width: 1170px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1.5rem;
 }
 
 .logo {
   text-align: center;
   font-size: 3rem;
-
+  padding: 3rem;
 }
 
 .logo span {
@@ -136,7 +135,7 @@ padding: 1.5rem;
 }
 
 .contact-wrapper {
-  box-shadow: 0 0 20px 0 rgba(255, 255, 255, .3);
+  box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.3);
 }
 
 .contact-wrapper > * {
@@ -156,14 +155,16 @@ padding: 1.5rem;
   grid-column: 1 / 3;
 }
 
-.contact-form form {
+.contact-form form p {
   margin: 0;
   padding: 1rem;
 }
 
-.contact-form form button, .contact-form form input, .contact-form form textarea {
+.contact-form form button,
+.contact-form form input,
+.contact-form form textarea {
   width: 100%;
-  padding: .7rem;
+  padding: 0.7rem;
   border: none;
   background: none;
   outline: 0;
@@ -179,7 +180,8 @@ padding: 1.5rem;
   padding: 1rem;
 }
 
-.contact-form form button:hover, contact-form form button:focus {
+.contact-form form button:hover,
+contact-form form button:focus {
   background: orangered;
   color: white;
   transition: background-color 1s ease-out;
@@ -190,28 +192,27 @@ padding: 1.5rem;
   background: #000;
 }
 
-.contact-info h4, .contact-info ul, .contact-info p {
+.contact-info h4,
+.contact-info ul,
+.contact-info p {
   text-align: center;
   margin: 0 0 1rem 0;
 }
 
-.contact-form ul {
+.contact-info ul {
   list-style: none;
   padding: 0;
 }
 
 .contact-info ul li {
- padding: .3rem;
+  padding: 0.3rem;
 }
-
-
-
 
 /*Biografia y Entrevista*/
 
 .containerArticulo {
   width: 60%;
-  
+
   display: grid;
   grid-template-columns: repeat(2, 4fr);
   grid-gap: 50px;
@@ -246,7 +247,7 @@ img {
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  
+
   display: grid;
   grid-template-columns: repeat(auto-fit, 133px);
   grid-auto-rows: 200px;
@@ -270,8 +271,6 @@ img {
   padding-top: 200px;
 }
 
-
-
 /*
 .multimediaItems{
 display: flex;
@@ -279,8 +278,6 @@ flex-wrap: wrap;
 -ms-flex-align: end;
 }
 */
-
-
 
 /*MEDIA QUERIES*/
 
@@ -351,12 +348,7 @@ flex-wrap: wrap;
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
-  .contact-wrapper > * {
-  padding: 2rem;
-  }
-  .contact-info h4, .contact-info ul, .contact-info p {
-    padding: 1rem;
-  }
+ 
 }
 @media screen and (min-width: 524px) and (max-width: 698px) {
   .galeriaItem:nth-of-type(odd) {
@@ -406,6 +398,10 @@ flex-wrap: wrap;
     font-size: 20px;
     font-style: italic;
   }
+  .contact-wrapper {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+  }
 }
 /*A Solo en esta media hay un instante entre el 698 y el 699 en el que las imagenes se me rompen*/
 @media screen and (min-width: 699px) and (max-width: 873px) {
@@ -454,19 +450,11 @@ flex-wrap: wrap;
     font-size: 20px;
     font-style: italic;
   }
-  body {
-    padding: 0 4rem;
-  }
   .contact-wrapper {
     display: grid;
     grid-template-columns: 2fr 1fr;
   }
-  .contact-wrapper > * {
-  padding: 2rem;
-  }
-  .contact-info h4, .contact-info ul, .contact-info p {
-    padding: 1rem;
-  }
+
 }
 @media screen and (min-width: 874px) and (max-width: 1048px) {
   .galeriaItem:nth-of-type(4n + 1) {
@@ -516,6 +504,10 @@ flex-wrap: wrap;
     font-size: 20px;
     font-style: italic;
   }
+  .contact-wrapper {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+  }
 }
 @media screen and (min-width: 1049px) and (max-width: 1224px) {
   .galeriaItem:nth-of-type(5n + 1) {
@@ -543,6 +535,10 @@ flex-wrap: wrap;
     font-weight: 300;
     font-size: 20px;
     font-style: italic;
+  }
+  .contact-wrapper {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
   }
 }
 @media screen and (min-width: 1225px) and (max-width: 1399px) {
@@ -572,6 +568,10 @@ flex-wrap: wrap;
     font-size: 20px;
     font-style: italic;
   }
+  .contact-wrapper {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+  }
 }
 @media screen and (min-width: 1400px) {
   .galeriaItem:nth-of-type(7n + 1) {
@@ -599,5 +599,9 @@ flex-wrap: wrap;
     font-weight: 300;
     font-size: 20px;
     font-style: italic;
+  }
+  .contact-wrapper {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
   }
 }
