--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,51 +1,53 @@
 body {
-  font-family: "Roboto", sans-serif; }
-
+  font-family: "Roboto", sans-serif;
+}
 footer {
-  margin-top: 20%;
-  padding-top: 0%; }
+  margin-top: 25%;
+
+  padding-top: 0%;
+}
 
 h2 {
-  font-size: 30px;
+  font-size: 15px;
   text-align: center;
   color: white;
-  padding: 15%;
-  text-decoration: solid; }
-
+}
 p {
   line-height: 1.5;
   font-family: "Inter", sans-serif;
   font-weight: 300;
   font-size: 25px;
-  font-style: italic; }
+  font-style: italic;
+}
 
 section {
   line-height: 1.5;
   font-family: "Inter", sans-serif;
-  font-weight: 500; }
+  font-weight: 500;
+}
 
 aside {
   margin: 5px;
   display: inline-block;
-  top: 200px; }
+  top: 200px;
+}
 
-header {
-  position: fixed;
-  width: 100%;
-  z-index: 1; }
+/*
+Nav
+*/
 
 .nav {
   color: white;
-  height: 80px; }
-
+  height: 80px;
+}
 .navContainer {
   display: flex;
   height: 100%;
   width: 90%;
   margin: 0 auto;
   justify-content: space-between;
-  align-items: center; }
-
+  align-items: center;
+}
 .navLogo {
   font-size: 1.5rem;
   text-align: center;
@@ -54,140 +56,181 @@ header {
   letter-spacing: 5px;
   text-decoration: underline;
   text-decoration-color: white;
+  font-size: 1.5rem;
   color: white;
-  font-family: "Mukta", sans-serif; }
-
+  font-family: "Mukta", sans-serif;
+}
 .navMenu {
   display: grid;
   grid-auto-flow: column;
-  gap: 3rem; }
-
+  gap: 3rem;
+}
 .navItem {
   color: white;
   text-decoration: none;
-  --clippy: polygon(0 0, 0 0, 0 100%, 0% 100%); }
-  .navItem::after {
-    content: "";
-    display: block;
-    background-color: white;
-    width: 90%;
-    margin-top: 3px;
-    height: 3px;
-    clip-path: var(--clippy);
-    transition: clip-path 0.3s; }
-  .navItem:hover {
-    --clippy: polygon(0 0, 100% 0, 100% 100%, 0 100%); }
-
+  --clippy: polygon(0 0, 0 0, 0 100%, 0% 100%);
+}
+.navItem::after {
+  content: "";
+  display: block;
+  background-color: white;
+  width: 90%;
+  margin-top: 3px;
+  height: 3px;
+  clip-path: var(--clippy);
+  transition: clip-path 0.3s;
+}
+.navItem:hover {
+  --clippy: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+}
 /*.navImput:checked + .navMenu {
-  }*/
+}*/
+
 .navLabel,
 .navInput {
-  display: none; }
+  display: none;
+}
+
+/*Presentacion*/
 
 .avatarPY {
-  background-image: url(../Galeria/Logo/Principal.jpg);
+  background-image: url(./Galeria/Logo/Principal.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding-bottom: 1000px; }
-
-.avatarGaleria {
-  background-image: url(../Galeria/Pescador/09.jpg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding-bottom: 1000px;
-  margin-top: 250px;
-  margin-bottom: auto; }
-
+  padding-bottom: 600px;
+}
 .pPresentacion {
   line-height: 1.5;
   font-family: "Inter", sans-serif;
   font-weight: 200;
   font-size: 25px;
-  font-style: italic; }
+
+  font-style: italic;
+}
+
+/*Contacto*/
 
 * {
-  box-sizing: border-box; }
-
+  box-sizing: border-box;
+}
 .content {
   max-width: 1170px;
   margin-left: auto;
   margin-right: auto;
-  padding: 1.5rem; }
+  padding: 1.5rem;
+}
 
 .logo {
   text-align: center;
   font-size: 3rem;
-  padding: 3rem; }
-  .logo span {
-    color: #008f39; }
+  padding: 3rem;
+}
+
+.logo span {
+  color: orangered;
+}
 
 .contact-wrapper {
-  box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.3); }
+  box-shadow: 0 0 20px 0 rgba(255, 255, 255, 0.3);
+}
 
 .contact-wrapper > * {
-  padding: 1rem; }
+  padding: 1rem;
+}
 
 .contact-form {
-  background: #222222; }
-  .contact-form form {
-    display: grid;
-    grid-template-columns: 1fr 1fr; }
-    .contact-form form p {
-      margin: 0;
-      padding: 1rem; }
-    .contact-form form .block {
-      grid-column: 1 / 3; }
-    .contact-form form button, .contact-form form input, .contact-form form textarea {
-      width: 100%;
-      padding: 0.7rem;
-      border: none;
-      background: none;
-      outline: 0;
-      color: white;
-      border-bottom: 1px solid orangered; }
-    .contact-form form button {
-      background: orangered;
-      color: black;
-      border: 0;
-      text-transform: uppercase;
-      padding: 1rem; }
-      .contact-form form button:hover, .contact-form form button:focus {
-        background: orangered;
-        color: white;
-        transition: background-color 1s ease-out;
-        outline: 0; }
+  background: #222222;
+}
+
+.contact-form form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.contact-form form .block {
+  grid-column: 1 / 3;
+}
+
+.contact-form form p {
+  margin: 0;
+  padding: 1rem;
+}
+
+.contact-form form button,
+.contact-form form input,
+.contact-form form textarea {
+  width: 100%;
+  padding: 0.7rem;
+  border: none;
+  background: none;
+  outline: 0;
+  color: white;
+  border-bottom: 1px solid orangered;
+}
+
+.contact-form form button {
+  background: orangered;
+  color: black;
+  border: 0;
+  text-transform: uppercase;
+  padding: 1rem;
+}
+
+.contact-form form button:hover,
+contact-form form button:focus {
+  background: orangered;
+  color: white;
+  transition: background-color 1s ease-out;
+  outline: 0;
+}
 
 .contact-info {
-  background: #000; }
-  .contact-info ul {
-    list-style: none;
-    padding: 0; }
-    .contact-info ul li {
-      padding: 0.3rem; }
-  .contact-info h4, .contact-info ul, .contact-info p {
-    text-align: center;
-    margin: 0 0 1rem 0; }
+  background: #000;
+}
+
+.contact-info h4,
+.contact-info ul,
+.contact-info p {
+  text-align: center;
+  margin: 0 0 1rem 0;
+}
+
+.contact-info ul {
+  list-style: none;
+  padding: 0;
+}
+
+.contact-info ul li {
+  padding: 0.3rem;
+}
+
+/*Biografia y Entrevista*/
 
 .containerArticulo {
   width: 60%;
+  
   display: grid;
   grid-template-columns: repeat(2, 4fr);
   grid-gap: 50px;
-  align-items: center; }
+  align-items: center;
+}
 
 .containerEntrevista {
   width: 100%;
+
   display: grid;
   grid-template-columns: repeat(2, 9fr);
-  grid-gap: 50px; }
+  grid-gap: 50px;
+}
+
+/*Mini Galeriia Index*/
 
 img {
   width: 100%;
   height: 100%;
-  object-fit: cover; }
-
+  object-fit: cover;
+}
 .titulo {
   text-align: center;
   padding: 4rem 0;
@@ -195,41 +238,59 @@ img {
   letter-spacing: 5px;
   text-decoration: underline;
   text-decoration-color: white;
-  font-size: 2.4rem; }
-
+  font-size: 2.4rem;
+  /*margin-top: 50px;*/
+}
 .galeria {
   width: 85%;
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
+
   display: grid;
   grid-template-columns: repeat(auto-fit, 133px);
   grid-auto-rows: 200px;
   justify-content: center;
-  gap: 1rem; }
-
+  gap: 1rem;
+}
 .galeriaItem {
   clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
   grid-column: span 2;
   height: 282px;
   /*si cada imagen ocupa 2 columnas de 133px entonces mide 266px mas el gap de 16px que es igual a 282px, este valor que equivale al ancho lo voy a usar para ponerle tbn el alto lo cual me va a acomodar las imagenes con la mismas dimenciones*/
-  transition: 0.5s filter; }
-  .galeriaItem:hover {
-    filter: brightness(0.3); }
-  .galeriaItem:first-of-type {
-    grid-column: 2 / span 2; }
-
+  transition: 0.5s filter;
+}
+.galeriaItem:hover {
+  filter: brightness(0.3);
+}
+.galeriaItem:first-of-type {
+  grid-column: 2 / span 2;
+}
 .multimedia {
-  padding-top: 200px; }
+  padding-top: 200px;
+}
+
+/*
+.multimediaItems{
+display: flex;
+flex-wrap: wrap;
+-ms-flex-align: end;
+}
+*/
+
+/*MEDIA QUERIES*/
 
 @media screen and (min-width: 320px) and (max-width: 523px) {
   .galeriaItem:first-of-type {
-    grid-column: 1 / span 2; }
+    grid-column: 1 / span 2;
+  }
   .galeria {
-    grid-auto-rows: 282px; }
+    grid-auto-rows: 282px;
+  }
   .navLabel {
     display: block;
-    cursor: pointer; }
+    cursor: pointer;
+  }
   .navMenu {
     position: fixed;
     top: 80px;
@@ -242,49 +303,66 @@ img {
     flex-direction: column;
     align-items: center;
     clip-path: circle(0 at center);
-    transition: clip-path 1s ease-in-out; }
+    transition: clip-path 1s ease-in-out;
+  }
   .navInput:checked + .navMenu {
-    clip-path: circle(100% at center); }
+    clip-path: circle(100% at center);
+  }
   .containerArticulo {
     width: 85%;
+
     display: grid;
     grid-template-columns: repeat(1, 4fr);
-    grid-gap: 50px; }
+    grid-gap: 50px;
+  }
   .containerEntrevista {
     width: 85%;
+
     display: grid;
     grid-template-columns: repeat(1, 9fr);
     grid-gap: 50px;
-    justify-items: center; }
+
+    justify-items: center;
+  }
   p {
     line-height: 1.5;
     font-family: "Inter", sans-serif;
     font-weight: 300;
     font-size: 15px;
-    font-style: italic; }
+    font-style: italic;
+  }
   .titulo {
-    font-size: 20px; }
+    font-size: 20px;
+  }
   .logo {
-    font-size: 25px; }
+    font-size: 25px;
+  }
   h3 {
-    font-size: 15px; }
+    font-size: 15px;
+  }
   .contact-wrapper {
     display: grid;
-    grid-column: 2 / 1; }
+    grid-column: 2 / 1;
+  }
   .contact-form form {
     display: grid;
-    grid-column: 2 / 1; }
-    .contact-form form p {
-      margin: 0;
-      padding: 0.5rem;
-      font-size: 12px; } }
+    grid-column: 2 / 1;
+  }
 
+  .contact-form form p {
+    margin: 0;
+    padding: 0.5rem;
+    font-size: 12px;
+  }
+}
 @media screen and (min-width: 524px) and (max-width: 698px) {
   .galeriaItem:nth-of-type(odd) {
-    grid-column: 2 / span 2; }
+    grid-column: 2 / span 2;
+  }
   .navLabel {
     display: block;
-    cursor: pointer; }
+    cursor: pointer;
+  }
   .navMenu {
     position: fixed;
     top: 80px;
@@ -297,37 +375,48 @@ img {
     flex-direction: column;
     align-items: center;
     clip-path: circle(0 at center);
-    transition: clip-path 1s ease-in-out; }
+    transition: clip-path 1s ease-in-out;
+  }
   .navInput:checked + .navMenu {
-    clip-path: circle(100% at center); }
+    clip-path: circle(100% at center);
+  }
   .containerArticulo {
     width: 85%;
+
     display: grid;
     grid-template-columns: repeat(1, 4fr);
-    grid-gap: 50px; }
+    grid-gap: 50px;
+  }
   .containerEntrevista {
     width: 85%;
+
     display: grid;
     grid-template-columns: repeat(1, 9fr);
     grid-gap: 50px;
-    justify-items: center; }
+
+    justify-items: center;
+  }
   p {
     line-height: 1.5;
     font-family: "Inter", sans-serif;
     font-weight: 300;
     font-size: 20px;
-    font-style: italic; }
+    font-style: italic;
+  }
   .contact-wrapper {
     display: grid;
-    grid-column: 2 / 1; } }
-
+    grid-column: 2 / 1;
+  }
+}
 /*A Solo en esta media hay un instante entre el 698 y el 699 en el que las imagenes se me rompen*/
 @media screen and (min-width: 699px) and (max-width: 873px) {
   .galeriaItem:nth-of-type(3n + 1) {
-    grid-column: 2 / span 2; }
+    grid-column: 2 / span 2;
+  }
   .navLabel {
     display: block;
-    cursor: pointer; }
+    cursor: pointer;
+  }
   .navMenu {
     position: fixed;
     top: 80px;
@@ -340,35 +429,45 @@ img {
     flex-direction: column;
     align-items: center;
     clip-path: circle(0 at center);
-    transition: clip-path 1s ease-in-out; }
+    transition: clip-path 1s ease-in-out;
+  }
   .navInput:checked + .navMenu {
-    clip-path: circle(100% at center); }
+    clip-path: circle(100% at center);
+  }
   .containerArticulo {
     width: 85%;
+
     display: grid;
     grid-template-columns: repeat(1, 4fr);
-    grid-gap: 50px; }
+    grid-gap: 50px;
+  }
   .containerEntrevista {
     width: 85%;
+
     display: grid;
     grid-template-columns: repeat(1, 9fr);
-    grid-gap: 50px; }
+    grid-gap: 50px;
+  }
   p {
     line-height: 1.5;
     font-family: "Inter", sans-serif;
     font-weight: 300;
     font-size: 20px;
-    font-style: italic; }
+    font-style: italic;
+  }
   .contact-wrapper {
     display: grid;
-    grid-column: 2 / 1; } }
-
+    grid-column: 2 / 1;
+  }
+}
 @media screen and (min-width: 874px) and (max-width: 1048px) {
   .galeriaItem:nth-of-type(4n + 1) {
-    grid-column: 2 / span 2; }
+    grid-column: 2 / span 2;
+  }
   .navLabel {
     display: block;
-    cursor: pointer; }
+    cursor: pointer;
+  }
   .navMenu {
     position: fixed;
     top: 80px;
@@ -381,98 +480,132 @@ img {
     flex-direction: column;
     align-items: center;
     clip-path: circle(0 at center);
-    transition: clip-path 1s ease-in-out; }
+    transition: clip-path 1s ease-in-out;
+  }
   .navInput:checked + .navMenu {
-    clip-path: circle(100% at center); }
+    clip-path: circle(100% at center);
+  }
   .containerArticulo {
     width: 85%;
+
     display: grid;
     grid-template-columns: repeat(1, 4fr);
-    grid-gap: 50px; }
+    grid-gap: 50px;
+  }
   .containerEntrevista {
     width: 85%;
+
     display: grid;
     grid-template-columns: repeat(1, 9fr);
     grid-gap: 50px;
-    justify-items: center; }
+
+    justify-items: center;
+  }
   p {
     line-height: 1.5;
     font-family: "Inter", sans-serif;
     font-weight: 300;
     font-size: 20px;
-    font-style: italic; }
+    font-style: italic;
+  }
   .contact-wrapper {
     display: grid;
-    grid-template-columns: 2fr 1fr; } }
-
+    grid-template-columns: 2fr 1fr;
+  }
+}
 @media screen and (min-width: 1049px) and (max-width: 1224px) {
   .galeriaItem:nth-of-type(5n + 1) {
-    grid-column: 2 / span 2; }
+    grid-column: 2 / span 2;
+  }
   .containerArticulo {
     width: 85%;
+
     display: grid;
     grid-template-columns: repeat(1, 4fr);
-    grid-gap: 50px; }
+    grid-gap: 50px;
+  }
   .containerEntrevista {
     width: 85%;
+
     display: grid;
     grid-template-columns: repeat(1, 9fr);
     grid-gap: 50px;
-    justify-items: center; }
+
+    justify-items: center;
+  }
   p {
     line-height: 1.5;
     font-family: "Inter", sans-serif;
     font-weight: 300;
     font-size: 20px;
-    font-style: italic; }
+    font-style: italic;
+  }
   .contact-wrapper {
     display: grid;
-    grid-template-columns: 2fr 1fr; } }
-
+    grid-template-columns: 2fr 1fr;
+  }
+}
 @media screen and (min-width: 1225px) and (max-width: 1399px) {
   .galeriaItem:nth-of-type(6n + 1) {
-    grid-column: 2 / span 2; }
+    grid-column: 2 / span 2;
+  }
   .containerArticulo {
     width: 85%;
+
     display: grid;
     grid-template-columns: repeat(1, 4fr);
-    grid-gap: 50px; }
+    grid-gap: 50px;
+  }
   .containerEntrevista {
     width: 85%;
+
     display: grid;
     grid-template-columns: repeat(1, 9fr);
     grid-gap: 50px;
-    justify-items: center; }
+
+    justify-items: center;
+  }
   p {
     line-height: 1.5;
     font-family: "Inter", sans-serif;
     font-weight: 300;
     font-size: 20px;
-    font-style: italic; }
+    font-style: italic;
+  }
   .contact-wrapper {
     display: grid;
-    grid-template-columns: 2fr 1fr; } }
-
+    grid-template-columns: 2fr 1fr;
+  }
+}
 @media screen and (min-width: 1400px) {
   .galeriaItem:nth-of-type(7n + 1) {
-    grid-column: 2 / span 2; }
+    grid-column: 2 / span 2;
+  }
   .containerArticulo {
     width: 85%;
+
     display: grid;
     grid-template-columns: repeat(2, 4fr);
-    grid-gap: 50px; }
+    grid-gap: 50px;
+  }
   .containerEntrevista {
     width: 85%;
+
     display: grid;
     grid-template-columns: repeat(2, 9fr);
     grid-gap: 50px;
-    justify-items: center; }
+
+    justify-items: center;
+  }
   p {
     line-height: 1.5;
     font-family: "Inter", sans-serif;
     font-weight: 300;
     font-size: 20px;
-    font-style: italic; }
+    font-style: italic;
+  }
   .contact-wrapper {
     display: grid;
-    grid-template-columns: 2fr 1fr; } }
+    grid-template-columns: 2fr 1fr;
+  }
+}
