--- a/scss/_General.scss
+++ b/scss/_General.scss
@@ -2,15 +2,17 @@ body {
     font-family: "Roboto", sans-serif;
   }
   footer {
-    margin-top: 25%;
+    margin-top: 20%;
   
     padding-top: 0%;
   }
   
   h2 {
-    font-size: 15px;
+    font-size: 30px;
     text-align: center;
     color: white;
+    padding: 15%;
+    text-decoration: solid;
   }
   p {
     line-height: 1.5;
@@ -30,4 +32,10 @@ body {
     margin: 5px;
     display: inline-block;
     top: 200px;
+  }
+  
+  header {
+    position: fixed;
+    width: 100%;
+    z-index: 1;
   }
