--- a/scss/_BioyEntre.scss
+++ b/scss/_BioyEntre.scss
@@ -1,16 +1,15 @@
 .containerArticulo {
     width: 60%;
-    
     display: grid;
     grid-template-columns: repeat(2, 4fr);
     grid-gap: 50px;
-    align-items: center;
+    
   }
   
   .containerEntrevista {
     width: 100%;
-  
     display: grid;
     grid-template-columns: repeat(2, 9fr);
     grid-gap: 50px;
+    justify-content: center;
   }
