--- a/scss/_Contacto.scss
+++ b/scss/_Contacto.scss
@@ -50,11 +50,11 @@
             background: none;
             outline: 0;
             color: white;
-            border-bottom: 1px solid orangered;
+            border-bottom: 1px solid grey;
         }
 
         button {
-            background: orangered;
+            background: grey;
             color: black;
             border: 0;
             text-transform: uppercase;
