--- a/scss/_BioyEntre.scss
+++ b/scss/_BioyEntre.scss
@@ -4,6 +4,7 @@
     grid-template-columns: repeat(2, 4fr);
     grid-gap: 50px;
     justify-content: center;
+    margin: 0 auto;
     
   }
   
@@ -13,4 +14,5 @@
     grid-template-columns: repeat(2, 9fr);
     grid-gap: 50px;
     justify-content: center;
+    margin: 0 auto;
   }
