--- a/css/styles.css
+++ b/css/styles.css
@@ -91,42 +91,42 @@ header {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding-bottom: 1000px; }
+  padding-bottom: 1400px; }
 
 .imgGaleria {
   background-image: url(../Galeria/Logo/3.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding-bottom: 1000px; }
+  padding-bottom: 1400px; }
 
 .imgBiografia {
   background-image: url(../Galeria/Logo/13.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding-bottom: 1000px; }
+  padding-bottom: 1400px; }
 
 .imgContacto {
   background-image: url(../Galeria/Logo/11.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding-bottom: 1000px; }
+  padding-bottom: 1400px; }
 
 .imgEntrevista {
   background-image: url(../Galeria/Logo/12.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding-bottom: 1000px; }
+  padding-bottom: 1400px; }
 
 .avatarGaleria {
   background-image: url(../Galeria/Pescador/09.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding-bottom: 1000px;
+  padding-bottom: 1400px;
   margin-top: 250px;
   margin-bottom: auto; }
 
@@ -206,15 +206,18 @@ header {
   grid-template-columns: repeat(2, 4fr);
   grid-gap: 50px;
   justify-content: center;
-  margin: 0 auto; }
+  margin: 0 auto;
+  align-items: center; }
 
 .containerEntrevista {
   width: 100%;
+  align-items: center;
   display: grid;
   grid-template-columns: repeat(2, 9fr);
   grid-gap: 50px;
   justify-content: center;
-  margin: 0 auto; }
+  margin: 0 auto;
+  align-items: center; }
 
 img {
   width: 100%;
@@ -305,12 +308,9 @@ img {
     font-size: 25px; }
   h3 {
     font-size: 15px; }
-  .contact-wrapper {
-    display: grid;
-    grid-column: 2 / 1; }
   .contact-form form {
     display: grid;
-    grid-column: 2 / 1; }
+    grid-column: auto; }
     .contact-form form p {
       margin: 0;
       padding: 0.5rem;
