--- a/scss/_BioyEntre.scss
+++ b/scss/_BioyEntre.scss
@@ -5,14 +5,18 @@
     grid-gap: 50px;
     justify-content: center;
     margin: 0 auto;
+    align-items: center;
     
   }
   
   .containerEntrevista {
     width: 100%;
+    align-items: center;
     display: grid;
     grid-template-columns: repeat(2, 9fr);
     grid-gap: 50px;
     justify-content: center;
     margin: 0 auto;
+    align-items: center;
+    
   }
