--- a/scss/_MediaQueries.scss
+++ b/scss/_MediaQueries.scss
@@ -60,13 +60,13 @@
   }
 
   .contact-form form {
-    display: grid;
-    grid-column: auto;
+    display: flex;
+    flex-direction: column;
 
     p {
       margin: 0;
       padding: 0.5rem;
-      font-size: 12px;
+      font-size: 20px;
     }
   }
 }
@@ -118,9 +118,15 @@
     font-size: 20px;
     font-style: italic;
   }
-  .contact-wrapper {
-    display: grid;
-    grid-column: 2 / 1;
+  .contact-form form {
+    display: flex;
+    flex-direction: column;
+
+    p {
+      margin: 0;
+      padding: 0.5rem;
+      font-size: 25px;
+    }
   }
 }
 /*A Solo en esta media hay un instante entre el 698 y el 699 en el que las imagenes se me rompen*/
